--- a/imgui.ini
+++ b/imgui.ini
@@ -4,27 +4,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Line Rendering Options]
-Pos=9,28
+Pos=19,21
 Size=367,175
 Collapsed=1
 
 [Window][Log]
-Pos=452,21
+Pos=19,68
 Size=376,243
 Collapsed=1
 
 [Window][Raycasting Options]
-Pos=20,620
+Pos=22,117
 Size=367,226
 Collapsed=0
 
 [Window][Solver Options]
-Pos=10,40
+Pos=21,44
 Size=371,507
-Collapsed=0
+Collapsed=1
 
 [Window][Dispersion Options]
-Pos=33,883
+Pos=19,90
 Size=429,304
-Collapsed=0
+Collapsed=1
+
+[Window][Fluctuation Height-field]
+Pos=21,138
+Size=377,279
+Collapsed=1
 
