--- a/DXTutorial.vcxproj.filters
+++ b/DXTutorial.vcxproj.filters
@@ -182,6 +182,9 @@
     <ClCompile Include="Volume\Volume_IO.cpp">
       <Filter>Source Files\VolumeTexture</Filter>
     </ClCompile>
+    <ClCompile Include="Volume\BinaryWriter.cpp">
+      <Filter>Source Files\VolumeTexture</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Keyboard\KeyboardEvent.h">
@@ -357,6 +360,9 @@
     </ClInclude>
     <ClInclude Include="Options\fluctuationheightfieldOptions.h">
       <Filter>Header Files\Options</Filter>
+    </ClInclude>
+    <ClInclude Include="Volume\BinaryWriter.h">
+      <Filter>Header Files\VolumeTexture</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
