--- a/imgui.ini
+++ b/imgui.ini
@@ -4,32 +4,37 @@ Size=400,400
 Collapsed=0
 
 [Window][Line Rendering Options]
-Pos=632,58
-Size=367,196
-Collapsed=0
+Pos=500,45
+Size=368,260
+Collapsed=1
 
 [Window][Log]
-Pos=25,659
-Size=376,224
-Collapsed=0
+Pos=15,94
+Size=350,150
+Collapsed=1
 
 [Window][Raycasting Options]
-Pos=20,35
+Pos=18,132
 Size=367,224
 Collapsed=0
 
 [Window][Solver Options]
-Pos=19,88
-Size=333,507
-Collapsed=0
+Pos=17,28
+Size=385,547
+Collapsed=1
 
 [Window][Dispersion Options]
-Pos=396,263
-Size=429,306
-Collapsed=0
+Pos=22,58
+Size=410,362
+Collapsed=1
 
 [Window][Fluctuation Height-field]
-Pos=20,63
+Pos=19,180
 Size=378,449
 Collapsed=1
+
+[Window][Cross-Section]
+Pos=18,586
+Size=392,243
+Collapsed=0
 
