--- a/DXTutorial.vcxproj.filters
+++ b/DXTutorial.vcxproj.filters
@@ -45,9 +45,6 @@
     <Filter Include="Source Files\BinaryStream">
       <UniqueIdentifier>{3f9cfdaf-4e81-4f90-8b02-9ab4c5bef6fa}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\BinaryStream">
-      <UniqueIdentifier>{99ceb923-4899-4680-864f-14d9cd432d28}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Shaders">
       <UniqueIdentifier>{f6ab76af-48b7-4a38-94f6-338d1309efa3}</UniqueIdentifier>
     </Filter>
@@ -111,6 +108,12 @@
     <Filter Include="Source Files\CrossSection">
       <UniqueIdentifier>{9ee9efb1-3adb-4dad-9d4c-a14ee7a2f0d2}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\VolumeIO">
+      <UniqueIdentifier>{7cf1bc11-6f0c-42ef-9bfe-4c5f04d91865}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\ParticleTracing">
+      <UniqueIdentifier>{aef9d3bb-64ed-48d1-97e2-db887a5a275b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -155,9 +158,6 @@
     <ClCompile Include="Graphics\Graphics.cpp">
       <Filter>Source Files\Graphics</Filter>
     </ClCompile>
-    <ClCompile Include="Cuda\CudaSolver.cpp">
-      <Filter>Source Files\Cuda</Filter>
-    </ClCompile>
     <ClCompile Include="Cuda\CudaDevice.cpp">
       <Filter>Source Files\Cuda</Filter>
     </ClCompile>
@@ -193,6 +193,12 @@
     </ClCompile>
     <ClCompile Include="CrossSection\CrossSection.cu">
       <Filter>Source Files\CrossSection</Filter>
+    </ClCompile>
+    <ClCompile Include="Cuda\CudaHelperFunctions.cpp">
+      <Filter>Source Files\Cuda</Filter>
+    </ClCompile>
+    <ClCompile Include="Cuda\CudaSolver.cu">
+      <Filter>Source Files\Cuda</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -340,9 +346,6 @@
     <ClInclude Include="Timer\Timer.h">
       <Filter>Header Files\Timer</Filter>
     </ClInclude>
-    <ClInclude Include="Volume\Volume_IO.h">
-      <Filter>Header Files\VolumeTexture</Filter>
-    </ClInclude>
     <ClInclude Include="HelperFunctions\HelperFunctions.h">
       <Filter>Header Files\HelperFunctions</Filter>
     </ClInclude>
@@ -364,9 +367,6 @@
     <ClInclude Include="Options\fluctuationheightfieldOptions.h">
       <Filter>Header Files\Options</Filter>
     </ClInclude>
-    <ClInclude Include="Volume\BinaryWriter.h">
-      <Filter>Header Files\VolumeTexture</Filter>
-    </ClInclude>
     <ClInclude Include="Options\RenderingOptions.h">
       <Filter>Header Files\Options</Filter>
     </ClInclude>
@@ -378,6 +378,24 @@
     </ClInclude>
     <ClInclude Include="Options\CrossSectionOptions.h">
       <Filter>Header Files\Options</Filter>
+    </ClInclude>
+    <ClInclude Include="Volume\Volume_IO.h">
+      <Filter>Header Files\VolumeIO</Filter>
+    </ClInclude>
+    <ClInclude Include="Volume\BinaryWriter.h">
+      <Filter>Header Files\VolumeIO</Filter>
+    </ClInclude>
+    <ClInclude Include="Volume\Volume_IO_Z_Major.h">
+      <Filter>Header Files\VolumeIO</Filter>
+    </ClInclude>
+    <ClInclude Include="Volume\Volume_IO_X_Major.h">
+      <Filter>Header Files\VolumeIO</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticleTracing\ParticleTracing.h">
+      <Filter>Header Files\ParticleTracing</Filter>
+    </ClInclude>
+    <ClInclude Include="Cuda\Cuda_helper_math_host.h">
+      <Filter>Header Files\Cuda</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
