--- a/imgui.ini
+++ b/imgui.ini
@@ -4,37 +4,42 @@ Size=400,400
 Collapsed=0
 
 [Window][Line Rendering Options]
-Pos=394,10
+Pos=1,143
 Size=368,260
 Collapsed=1
 
 [Window][Log]
-Pos=41,430
+Pos=1,69
 Size=350,251
-Collapsed=0
+Collapsed=1
 
 [Window][Raycasting Options]
-Pos=553,253
+Pos=2,27
 Size=367,224
 Collapsed=1
 
 [Window][Solver Options]
-Pos=5,10
+Pos=0,116
 Size=385,547
 Collapsed=1
 
 [Window][Dispersion Options]
-Pos=6,30
+Pos=1,5
 Size=410,362
 Collapsed=1
 
 [Window][Fluctuation Height-field]
-Pos=4,91
+Pos=2,48
 Size=378,449
 Collapsed=1
 
 [Window][Cross-Section]
-Pos=2,113
+Pos=0,92
 Size=392,303
+Collapsed=1
+
+[Window][Turbulent Mixing]
+Pos=1,168
+Size=362,69
 Collapsed=0
 
