--- a/imgui.ini
+++ b/imgui.ini
@@ -4,42 +4,47 @@ Size=400,400
 Collapsed=0
 
 [Window][Line Rendering Options]
-Pos=42,161
+Pos=18,204
 Size=366,237
 Collapsed=1
 
 [Window][Log]
-Pos=10,99
+Pos=50,513
 Size=350,303
 Collapsed=1
 
 [Window][Raycasting Options]
-Pos=551,59
-Size=367,204
+Pos=32,171
+Size=377,281
 Collapsed=0
 
 [Window][Solver Options]
-Pos=22,25
+Pos=44,535
 Size=384,507
 Collapsed=0
 
 [Window][Dispersion Options]
-Pos=21,545
+Pos=35,477
 Size=403,413
-Collapsed=0
+Collapsed=1
 
 [Window][Fluctuation Height-field]
-Pos=2,70
+Pos=22,107
 Size=378,449
 Collapsed=1
 
 [Window][Cross-Section]
-Pos=5,51
+Pos=24,5
 Size=392,303
 Collapsed=1
 
 [Window][Turbulent Mixing]
-Pos=447,0
+Pos=25,137
 Size=362,69
+Collapsed=1
+
+[Window][Time-Space]
+Pos=30,70
+Size=328,220
 Collapsed=1
 
