--- a/DXTutorial.vcxproj.filters
+++ b/DXTutorial.vcxproj.filters
@@ -206,6 +206,9 @@
     <ClCompile Include="VolumeIO\Volume_IO.cpp">
       <Filter>Source Files\VolumeIO</Filter>
     </ClCompile>
+    <ClCompile Include="Raycaster\TimeSpaceField.cu">
+      <Filter>Source Files\Raycasting</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Keyboard\KeyboardEvent.h">
@@ -361,14 +364,8 @@
     <ClInclude Include="Options\DispresionOptions.h">
       <Filter>Header Files\Options</Filter>
     </ClInclude>
-    <ClInclude Include="Dispersion\DispersionTracer.h">
-      <Filter>Header Files\Heightfield</Filter>
-    </ClInclude>
     <ClInclude Include="Cuda\CudaArray.h">
       <Filter>Header Files\Cuda</Filter>
-    </ClInclude>
-    <ClInclude Include="Dispersion\fluctuationHeightfield.h">
-      <Filter>Header Files\Heightfield</Filter>
     </ClInclude>
     <ClInclude Include="Options\fluctuationheightfieldOptions.h">
       <Filter>Header Files\Options</Filter>
@@ -403,12 +400,6 @@
     <ClInclude Include="Particle\ParticleHelperFunctions.h">
       <Filter>Header Files\Particle</Filter>
     </ClInclude>
-    <ClInclude Include="Dispersion\HightfieldFTLE.h">
-      <Filter>Header Files\Heightfield</Filter>
-    </ClInclude>
-    <ClInclude Include="Dispersion\ftleHelperFunctions.h">
-      <Filter>Header Files\Heightfield</Filter>
-    </ClInclude>
     <ClInclude Include="VolumeIO\BinaryWriter.h">
       <Filter>Header Files\VolumeIO</Filter>
     </ClInclude>
@@ -426,6 +417,30 @@
     </ClInclude>
     <ClInclude Include="Options\FSLEOptions.h">
       <Filter>Header Files\Options</Filter>
+    </ClInclude>
+    <ClInclude Include="Heightfield\DispersionHelper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Heightfield\fluctuationHeightfield.h">
+      <Filter>Header Files\Heightfield</Filter>
+    </ClInclude>
+    <ClInclude Include="Heightfield\ftleHelperFunctions.h">
+      <Filter>Header Files\Heightfield</Filter>
+    </ClInclude>
+    <ClInclude Include="Heightfield\Heightfield.h">
+      <Filter>Header Files\Heightfield</Filter>
+    </ClInclude>
+    <ClInclude Include="Heightfield\HightfieldFTLE.h">
+      <Filter>Header Files\Heightfield</Filter>
+    </ClInclude>
+    <ClInclude Include="Raycaster\TimeSpaceField.h">
+      <Filter>Header Files\Raycasting</Filter>
+    </ClInclude>
+    <ClInclude Include="Options\TimeSpace3DOptions.h">
+      <Filter>Header Files\Options</Filter>
+    </ClInclude>
+    <ClInclude Include="Raycaster\FieldGenerator3D.h">
+      <Filter>Header Files\Raycasting</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -485,15 +500,6 @@
     <CudaCompile Include="Particle\Particle.cu">
       <Filter>Source Files\Particle</Filter>
     </CudaCompile>
-    <CudaCompile Include="Dispersion\DispersionTracer.cu">
-      <Filter>Source Files\Heightfield</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Dispersion\DispersionHelper.cu">
-      <Filter>Source Files\Heightfield</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Dispersion\fluctuationHeightfield.cu">
-      <Filter>Source Files\Heightfield</Filter>
-    </CudaCompile>
     <CudaCompile Include="TurbulentMixing\TurbulentMixing.cu">
       <Filter>Source Files\TurbulentMixing</Filter>
     </CudaCompile>
@@ -501,15 +507,29 @@
       <Filter>Source Files\TurbulentMixing</Filter>
     </CudaCompile>
     <CudaCompile Include="CrossSection\CrossSection.cu" />
-    <CudaCompile Include="Cuda\CudaSolver.cu" />
-    <CudaCompile Include="Dispersion\HeightfieldFTLE.cu">
-      <Filter>Source Files\Heightfield</Filter>
-    </CudaCompile>
-    <CudaCompile Include="Dispersion\ftleHelperFunctions.cu">
-      <Filter>Source Files\Heightfield</Filter>
-    </CudaCompile>
     <CudaCompile Include="FSLE\FSLE.cu">
       <Filter>Source Files\FSLE</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Cuda\CudaSolver.cu">
+      <Filter>Source Files\Cuda</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Heightfield\DispersionHelper.cu">
+      <Filter>Source Files\Heightfield</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Heightfield\fluctuationHeightfield.cu">
+      <Filter>Source Files\Heightfield</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Heightfield\ftleHelperFunctions.cu">
+      <Filter>Source Files\Heightfield</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Heightfield\Heightfield.cu">
+      <Filter>Source Files\Heightfield</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Heightfield\HeightfieldFTLE.cu">
+      <Filter>Source Files\Heightfield</Filter>
+    </CudaCompile>
+    <CudaCompile Include="Raycaster\FieldGenerator3D.cu">
+      <Filter>Source Files\Raycasting</Filter>
     </CudaCompile>
   </ItemGroup>
 </Project>
